--- a/Features.org
+++ b/Features.org
@@ -1,5 +1,16 @@
 
 * FEATURES
   + All recipes which produce stone tools are disabled.
-  + Half of the time, blocks will drop 64 dirt instead of what they're
-    supposed to.
+** BLOCK DROP FEATURES
+   + All blocks have a chance of dropping 64 dirt instead of the
+     intended drop
+   + All stone/cobble/stone brick blocks have a chance of spawning a
+     silverfish and potentially several more nearby
+   + All wood blocks have a chance of spawning bees in all nearby wood
+     blocks
+* IDEAS
+  + chickens explode on contact
+  + anvil if you stand still
+  + skeles in nether give wither
+  + tall grass gives poison
+  + something underwater
