--- a/Features.org
+++ b/Features.org
@@ -1,6 +1,6 @@
 
 * FEATURES
-  + All recipes which produce stone tools are disabled.
+  + All recipes which produce stone tools are disabled
 ** BLOCK DROP FEATURES
    + All blocks have a chance of dropping 64 dirt instead of the
      intended drop
@@ -8,9 +8,12 @@
      silverfish and potentially several more nearby
    + All wood blocks have a chance of spawning bees in all nearby wood
      blocks
+   + The following blocks will never drop anything: crafting table,
+     furnace, blast furnace, smoker
 * IDEAS
   + chickens explode on contact
   + anvil if you stand still
   + skeles in nether give wither
   + tall grass gives poison
   + something underwater
+  + ghasts should free spawn
