--- a/Features.org
+++ b/Features.org
@@ -8,6 +8,7 @@
     parrots
   + If you stand still for more than ten seconds, an anvil will drop
     on your head
+  + Tall grass, ferns, and dead bushes give you poison and slowness on contact
 ** BLOCK DROP FEATURES
    + All blocks have a chance of dropping 64 dirt instead of the
      intended drop
@@ -19,7 +20,6 @@
      furnace, blast furnace, smoker
 * IDEAS
   + skeles in nether give wither
-  + tall grass gives poison
   + something underwater
   + ghasts should free spawn
   + Ores (diamond, iron, etc) should have a higher than average chance
