--- a/Features.org
+++ b/Features.org
@@ -12,6 +12,7 @@
   + Ghasts spawn in all dimensions
   + If the player is hit by a skeleton arrow in the Nether, they get
     the Wither effect
+  + Water electrocutes you, unless in a boat
 ** BLOCK DROP FEATURES
    + All blocks have a chance of dropping 64 dirt instead of the
      intended drop
@@ -22,7 +23,6 @@
    + The following blocks will never drop anything: crafting table,
      furnace, blast furnace, smoker
 * IDEAS
-  + something underwater
   + Ores (diamond, iron, etc) should have a higher than average chance
     of tripping the 64-dirt condition
   + something with lightning?
