--- a/Features.org
+++ b/Features.org
@@ -21,11 +21,11 @@
   + snowspeed :: Snow makes you go fast
   + blazepower :: Blazes will spawn evokers
 ** BLOCK DROP FEATURES
-   + All blocks have a chance of dropping 64 dirt instead of the
-     intended drop
-   + The following blocks have a higher chance of dropping dirt: iron,
-     coal, lapis, gold, diamond, emerald, nether quartz, nether gold,
-     ancient debris
+   + dirtstacks :: All blocks have a chance of dropping 64 dirt
+                   instead of the intended drop
+     - The following blocks have a higher chance of dropping dirt:
+       iron, coal, lapis, gold, diamond, emerald, nether quartz,
+       nether gold, ancient debris
    + All stone/cobble/stone brick blocks have a chance of spawning a
      silverfish and potentially several more nearby
    + All wood blocks have a chance of spawning bees in all nearby wood
@@ -43,3 +43,4 @@
   + Doors?
   + Wolves?
   + Flowers?
+  + Phantoms?
