End stone effect

--- a/Features.org
+++ b/Features.org
@@ -22,6 +22,7 @@
   + blazepower :: Blazes will spawn evokers
   + witherrose :: All flowers (and berry bushes) give the Wither
                   effect on contact now, or when picked up
+  + endspeed :: End stones make you go fast
 ** BLOCK DROP FEATURES
    + dirtstacks :: All blocks have a chance of dropping 64 dirt
                    instead of the intended drop
@@ -45,7 +46,6 @@
   + Sand?
   + Doors?
   + Wolves?
-  + Flowers?
   + Phantoms?
   + More silverfish in stronghold?
   + Arrow bombs?
