--- a/Features.org
+++ b/Features.org
@@ -28,8 +28,10 @@
   + weepingangel :: Armor stands will chase you when you're not
                     looking at them (disabled by default, as the
                     feature can be quite laggy)
-  + sandattack :: While standing on certain blocks, sand will
-                  constantly fall from above
+  + sandattack :: While standing on the following blocks, sand will
+                  constantly fall from above: sand, gravel, end stone
+  + levitation :: When standing on ore blocks, the player is given the
+                  Levitation effect
 ** BLOCK DROP FEATURES
    + dirtstacks :: All blocks have a chance of dropping 64 dirt
                    instead of the intended drop
