--- a/Features.org
+++ b/Features.org
@@ -36,6 +36,7 @@
                   Levitation effect
   + platefire :: Pressure plates have a slight chance of catching fire
                  when you step on them
+  + slowslab :: Slabs slow you down
 ** BLOCK DROP FEATURES
    + dirtstacks :: All blocks have a chance of dropping 64 dirt
                    instead of the intended drop
