Everybody gets a pet phantom ^.^

--- a/Features.org
+++ b/Features.org
@@ -40,6 +40,8 @@
   + torches :: The following blocks break if you look at them:
                torches, redstone torches, soul torches, lanterns, and
                soul lanterns
+  + phantoms :: Every player will always have a phantom pursuing them,
+                and phantoms are immune to fire damage
 ** BLOCK DROP FEATURES
    + dirtstacks :: All blocks have a chance of dropping 64 dirt
                    instead of the intended drop
