--- a/Features.org
+++ b/Features.org
@@ -62,7 +62,7 @@
    + bees :: All wood blocks have a chance of spawning bees in all
              nearby wood blocks
    + nodrops :: The following blocks will never drop anything:
-                crafting table, furnace, blast furnace, smoker
+                crafting table, furnace, blast furnace, smoker, bed
    + endermites :: End stone will always spawn an endermite when
                    broken and will not drop itself as a block
    + netherrack :: If you destroy any common nether blocks, all nearby
