--- a/Features.org
+++ b/Features.org
@@ -50,6 +50,7 @@
   + mimics :: Chests will spawn in the wild which, if opened, will
               kill you
   + eggs :: Almost any mob can spawn from an egg
+  + eggarrow :: Skeletons will fire eggs in addition to arrows
 ** BLOCK DROP FEATURES
    + dirtstacks :: All blocks have a chance of dropping 64 dirt
                    instead of the intended drop
