--- a/Features.org
+++ b/Features.org
@@ -52,6 +52,7 @@
   + eggs :: Almost any mob (or diamonds) can spawn from an egg
   + eggarrow :: Skeletons will fire eggs in addition to arrows
   + eggdrop :: Several mobs will drop eggs when killed
+  + witherskele :: Wither skeletons spawn with full diamond armor
 ** BLOCK DROP FEATURES
    + dirtstacks :: All blocks have a chance of dropping 64 dirt
                    instead of the intended drop
